--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,11 +1,11 @@
 layout tall
 shell /bin/zsh --login
-font_family	Cascadia Code
+font_family	CascaydiaCove NF
 bold_font	auto
 italic_font	auto
 bold_italic_font auto
-font_size	14.5
-background_opacity 0.90
+font_size	16.0
+background_opacity 100.0
 scrollback_lines 5000
 tab_powerline_style angled
 tab_bar_style powerline
